[IMP] updated packages and removed vulnerabilities

--- a/Frontend/src/app/create-deal/create-deal.component.html
+++ b/Frontend/src/app/create-deal/create-deal.component.html
@@ -51,8 +51,8 @@
           </div>
 
           <div class="button-row">
-            <button type="button" type="submit" class="btn btn-primary active">Submit</button>
-            <button type="button" type="reset" value="Reset" class="btn btn-primary disabled">Reset</button>
+            <button type="submit" class="btn btn-primary active">Submit</button>
+            <button type="reset" value="Reset" class="btn btn-primary disabled">Reset</button>
           </div>
         </form>
       </div>
